# SecFePAS

./: .gitignore  README.md  ReadMe.md
dataset/: README.md  accuracy_and_model_size.csv  dataset_preparation_notes.md  notebook.ipynb  phase1_non_secure_sample_inference.txt
secure/athos/: README.md  astOutput.pkl  resnet50_fp32_41_sci.ezpc
secure/athos/build_dir/: CMakeLists.txt
secure/athos/debug/: seedot_ezpc_name_map.pkl
secure/athos/resnet50_fp16/SCI_HE/: config.json  input.npy  input_fixedpt_scale_15.inp  output.txt  resnet50_fp16_41_sci_HE0.cpp  resnet50_fp16_SCI_HE.out
secure/athos/resnet50_fp16/SCI_OT/: config.json  output.txt  resnet50_fp16_41_sci_OT0.cpp  resnet50_fp16_SCI_OT.out  results-Porthos2PC-server.csv
secure/athos/resnet50_fp32/: resnet50_fp32_41_sci.ezpc
secure/athos/resnet50_fp32/SCI_HE/: config.json
secure/athos/resnet50_fp32/SCI_HE copy/: output.txt  resnet50_fp32_41_sci_HE0.cpp  resnet50_fp32_SCI_HE.out
secure/athos/resnet50_fp32/SCI_OT/: config.json  output.txt  resnet50_fp32_41_sci_OT0.cpp  resnet50_fp32_SCI_OT.out  results-Porthos2PC-server.csv
secure/athos/resnet50_fp32/build_dir/: CMakeLists.txt
secure/athos/scripts/: run_onnx.py
secure/athos/sqnet_fp16/SCI_HE/: config.json  output.txt  sqnet_fp16_41_sci_HE0.cpp  (+2 more)
secure/opencheetah/: README.md
secure/opencheetah/network/: resnet16_fp32_41_sci_OT0.cpp  resnet50_fp32_41_sci_OT0.cpp  sqnet_fp16_41_sci_OT0.cpp  sqnet_fp32_41_sci_OT0.cpp
secure/opencheetah/scripts/: CMakeLists.txt  build.sh  fix_dead_filter.py  mod_cpp.py  run-client.sh  run-server.sh
(+23 files in other folders)
